[metadata]
name = breadbot
version = 2.1.0
author = Mark Young (ideamark)
author-email = ideamark@qq.com
home-page = https://github.com/ideamark/breadbot
description-file = README.md

classifier = 
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

keywords =
    setup
    distutils

[files]
packages =
    breadbot

data_files =
    /etc = etc/*
    /usr/local/bin = bin/*
