[metadata]
name = breadbot
version = 3.0.3
author = Mark Young (ideamark)
author-email = ideamark@qq.com
home-page = http://breadbot.fun
description-file = README.md

classifier = 
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

keywords =
    setup
    distutils

[files]
packages =
    breadbot

data_files =
    /etc = etc/*
    /usr/local/bin = bin/*
