[metadata]
name = breadbot
version = 3.1.0
author = Mark Yang (ideamark)
author-email = ideamark@qq.com
home-page = http://breadbot.fun
description-file = README.md

classifier = 
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

keywords =
    setup
    distutils

[files]
packages =
    breadbot
